# chain-follower

./: .gitignore  404.html  CHANGELOG.md  README.md  cabal.project  call-graph.dot  chain-follower.cabal  dist-newstyle  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  explorer.yml  release.yml
architecture/backend/: index.html
architecture/mock-chain/: index.html
architecture/modules/: index.html
architecture/rollback-store/: index.html
architecture/runner/: index.html
concepts/block-tree/: index.html
concepts/overview/: index.html
concepts/phases/: index.html
concepts/swap-partition/: index.html
docs/: index.md
docs/architecture/: backend.md  mock-chain.md  modules.md  rollback-store.md  runner.md
docs/concepts/: block-tree.md  overview.md  phases.md  swap-partition.md
docs/lean/: overview.md  theorems.md
docs/testing/: laws.md  properties.md
docs/tutorial/: running.md  walkthrough.md
exe/: Main.hs
explorer/: .gitignore  flake.nix  justfile  spago.yaml
explorer/src/: Main.purs
explorer/src/FFI/: Cytoscape.js  Cytoscape.purs  FileReader.js  FileReader.purs
explorer/src/Graph/: DotParser.js  DotParser.purs
lean/: ChainFollower.lean  lake-manifest.json  lakefile.lean
lean/ChainFollower/: BlockTree.lean  Pruning.lean  Rollback.lean
lean/overview/: index.html
lean/theorems/: index.html
lib/: ChainFollower.hs
lib/ChainFollower/: Backend.hs  Laws.hs  MockChain.hs  Runner.hs
lib/ChainFollower/Rollbacks/: Column.hs  Store.hs  Types.hs
search/: search_index.json
test/: E2ESpec.hs  LawsSpec.hs  LifecycleSpec.hs  PropertySpec.hs  RecoverySpec.hs  RunnerSpec.hs  TestDB.hs
testing/laws/: index.html
testing/properties/: index.html
tutorial/: Audit.hs  Balances.hs  Composed.hs  TutorialDB.hs  Types.hs
tutorial/running/: index.html
tutorial/walkthrough/: index.html
