cabal-version:   3.4
name:            chain-follower
version:         0.1.0.0
synopsis:        Abstract chain follower types with rollback support
description:
  Generic chain-following abstractions parameterized over block,
  point, and slot types. Provides Follower, Intersector, and
  ProgressOrRewind types for building chain synchronization
  clients without coupling to any specific blockchain.
  .
  Includes a CPS backend interface (Restoring\/Following) with
  phase-aware rollback support via @kv-transactions@.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Network
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

homepage:        https://github.com/lambdasistemi/chain-follower
bug-reports:     https://github.com/lambdasistemi/chain-follower/issues

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StrictData
    TypeFamilies

library
  import:           warnings
  exposed-modules:
    ChainFollower
    ChainFollower.Backend
    ChainFollower.Rollbacks.Column
    ChainFollower.Rollbacks.Store
    ChainFollower.Rollbacks.Types
    ChainFollower.Runner

  build-depends:
    , base                                     >=4.17 && <5
    , rocksdb-kv-transactions:kv-transactions
    , transformers                             >=0.5  && <0.7

  hs-source-dirs:   lib
  default-language: Haskell2010

library tutorial
  import:           warnings
  visibility:       public
  hs-source-dirs:   tutorial
  default-language: Haskell2010
  exposed-modules:
    Audit
    Balances
    Composed
    Types

  build-depends:
    , base                                     >=4.17 && <5
    , chain-follower
    , rocksdb-kv-transactions:kv-transactions

executable chain-follower-tutorial
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  build-depends:
    , base                                     >=4.17 && <5
    , bytestring                               >=0.10 && <0.13
    , chain-follower
    , chain-follower:tutorial
    , data-default                             >=0.7  && <0.8
    , lens                                     >=5.0  && <5.4
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , temporary                                >=1.3  && <1.4

test-suite tests
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  other-modules:
    E2ESpec
    PropertySpec
    RecoverySpec
    TestDB

  build-depends:
    , base                                     >=4.17 && <5
    , bytestring                               >=0.10 && <0.13
    , chain-follower
    , chain-follower:tutorial
    , data-default                             >=0.7  && <0.8
    , directory                                >=1.3  && <1.4
    , hspec                                    >=2.10 && <2.12
    , lens                                     >=5.0  && <5.4
    , QuickCheck                               >=2.14 && <2.16
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , temporary                                >=1.3  && <1.4

  build-tool-depends: hspec-discover:hspec-discover
